2003-02-11  Mo DeJong  <mdejong@users.sourceforge.net>

	* config.guess:
	* config.sub: Revert back to files released with
	Source-Navigator 5.1.2. The newer ones dropped
	support for the windows32 target and that broke 
	the install instructions.

2003-02-07  Mo DeJong  <mdejong@users.sourceforge.net>

	* missing:
	* mkinstalldirs: Add files that did not get
	imported before, but are actually needed by libgui.

2003-02-05  Mo DeJong  <mdejong@users.sourceforge.net>

	* COPYING:
	* ChangeLog:
	* Makefile.in:
	* config.guess:
	* config.sub:
	* configure:
	* configure.in:
	* install-sh:
	* config/acinclude.m4: Add acinclude.m4 from sources,
	but remove any macros that are not actually used.
	* itcl/*:
	* libgui/*:
	* tcl/*:
	* tk/*:
	* tix/*: Add bare bones toplevel configure, support
	files, as well as itcl, libgui, tcl, tk, and tix
	modules from sources.redhat.com CVS as of 2003-01-01.
	Tagged as SOURCES_IMPORT_2003_02_05.