@@ -19,6 +19,20 @@ AC_INIT(configure.in)
 AC_PREREQ(2.13)
 AC_CANONICAL_SYSTEM
 
+# When compiling with VC++ under Cygwin, we need to
+# check for a grep executable that does not treat
+# CRLF the same as LF. This problem causes a number
+# of really mysterious configure problems.
+
+case "${host}" in
+*windows32*)
+        result=`echo file.cA | tr A '\r' | grep -v '^file.c$'`
+        if test "$result" = "file.c" ; then
+            AC_MSG_ERROR([Can't build with Cygwin grep, see INSTALL.TXT])
+        fi
+        ;;
+esac
+
 TOP_SUBDIRS="tcl tk itcl tix libgui db snavigator"
 AC_SUBST(TOP_SUBDIRS)
 AC_CONFIG_SUBDIRS($TOP_SUBDIRS)
